--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">PROJECT - ACADEAMEASE1</string>
+    <string name="album">Album</string>
+    <string name="notes">Notes</string>
+    <string name="files">Files</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_album">addalbum\n</string>
+    <string name="img">image\n</string>
 </resources>
